background 'clipping' fixed

--- a/src/css/core.css
+++ b/src/css/core.css
@@ -9,6 +9,10 @@
     overflow: hidden;
 }
 
+body{
+    background: linear-gradient(to right, #4de810 0%, #feb906 20%, #282828 20%, #282828 80.25%, #feb906 80.25%,#4de810 100%);
+}
+
 canvas {
     background: url(../../tex/road.svg) repeat-y;
     background-size: contain;
